src/test/ui/const-generics/wf-misc.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/wf-misc.rs:9:17
   |
LL |     let _: [u8; N + 1];
   |                 ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`

error: generic parameters may not be used in const operations
  --> $DIR/wf-misc.rs:17:21
   |
LL |     let _: Const::<{N + 1}>;
   |                     ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`

error: aborting due to 2 previous errors

